[tool.poetry]
name = "swpy"
version = "0.1.2"
description = "A simple, yet useful stopwatch library."

license = "MIT"

authors = [
  "Peinan ZHANG <peinan7@gmail.co.jp>"
]

readme = "README.md"

homepage = "https://github.com/peinan/swpy"
repository = "https://github.com/peinan/swpy"

keywords = ["stopwatch", "timer"]


[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
pytest = "^4.0"
tox = "^3.9"
pytest-cov = "^2.7"
codecov = "^2.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
